@@ -6,6 +6,8 @@
 #undef HAVE_SOL_IPV6
 #undef HAVE_IP_PKTINFO
 #undef HAVE_IPV6_PKTINFO
+#undef HAVE_IP_DONTFRAGMENT
+#undef HAVE_IP_MTU_DISCOVER
 #undef HAVE_STRUCT_IP_MREQN
 #undef HAVE_STRUCT_IP_MREQ
 #undef HAVE_PTHREAD_MUTEX_TIMEDLOCK
