@@ -114,11 +114,12 @@ errno_to_WSA (guint32 code, const gchar *function_name)
 #endif
 	/*FIXME: case EROFS: result = WSAE????; break; */
 	case ESOCKTNOSUPPORT: result = WSAESOCKTNOSUPPORT; break;
-	case ETIMEDOUT: result = WSAENETDOWN; break;
+	case ETIMEDOUT: result = WSAETIMEDOUT; break;
 	case EWOULDBLOCK: result = WSAEWOULDBLOCK; break;
 	case EADDRNOTAVAIL: result = WSAEADDRNOTAVAIL; break;
 	/* This might happen with unix sockets */
 	case ENOENT: result = WSAECONNREFUSED; break;
+	case EDESTADDRREQ: result = WSAEDESTADDRREQ; break;
 	default:
 		sys_error = strerror (code);
 		msg = g_locale_to_utf8 (sys_error, strlen (sys_error), NULL, NULL, NULL);
